Дуже важка тема

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
         <ul class="list team-list">
           <li class="team-list-item">
+            <div class="team-container">
             <img
               src="./images/mark.jpg"
               alt="Product Designer Mark Guerrero"
@@ -145,9 +146,11 @@
               height="260"
             />
             <h3 class="team-titel">Mark Guerrero</h3>
-            <p class="team-listi-text">Product Designer</p>
+            <p class="team-list-text">Product Designer</p>
+          </div>
           </li>
           <li class="team-list-item">
+            <div class="team-container">
             <img
               src="./images/tom.jpg"
               alt="Frontend Developer Tom Ford"
@@ -155,9 +158,11 @@
               height="260"
             />
             <h3 class="team-titel">Tom Ford</h3>
-            <p class="team-listi-text">Frontend Developer</p>
+            <p class="team-list-text">Frontend Developer</p>
+          </div>
           </li>
           <li class="team-list-item">
+            <div class="team-container">
             <img
               src="./images/camila.jpg"
               alt="Marketing Camila Garcia"
@@ -165,9 +170,11 @@
               height="260"
             />
             <h3 class="team-titel">Camila Garcia</h3>
-            <p class="team-listi-text">Marketing</p>
+            <p class="team-list-text">Marketing</p>
+          </div>
           </li>
           <li class="team-list-item">
+            <div class="team-container">
             <img
               src="./images/daniel.jpg"
               alt="UI Designer Daniel Wilson"
@@ -175,7 +182,8 @@
               height="260"
             />
             <h3 class="team-titel">Daniel Wilson</h3>
-            <p class="team-listi-text">UI Designer</p>
+            <p class="team-list-text">UI Designer</p>
+          </div>
           </li>
         </ul>
       </div>
