--- a/portfolio.html
+++ b/portfolio.html
@@ -77,10 +77,12 @@
           </li>
         </ul>
 
+
         <!-- Works -->
 
         <ul class="list works-list">
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/bankingapp.jpg"
@@ -91,9 +93,11 @@
               <h2 class="caption">Banking App Interface Concept</h2>
               <p class="desc">App</p>
             </a>
+          </div>
           </li>
 
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/payment.jpg"
@@ -104,9 +108,11 @@
               <h2 class="caption">Cashless Payment</h2>
               <p class="desc">Marketing</p>
             </a>
+          </div>
           </li>
 
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/meditationapp.jpg"
@@ -117,9 +123,11 @@
               <h2 class="caption">Meditation App</h2>
               <p class="desc">App</p>
             </a>
+          </div>
           </li>
 
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/taxiservice.jpg"
@@ -130,8 +138,10 @@
               <h2 class="caption">Taxi Service</h2>
               <p class="desc">Marketing</p>
             </a>
+          </div>
           </li>
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/screenillustrations.jpg"
@@ -142,8 +152,10 @@
               <h2 class="caption">Screen Illustrations</h2>
               <p class="desc">Design</p>
             </a>
+          </div>
           </li>
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/onlinecourses.jpg"
@@ -154,9 +166,11 @@
               <h2 class="caption">Online Courses</h2>
               <p class="desc">Marketing</p>
             </a>
+          </div>
           </li>
 
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/storiesconcept.jpg"
@@ -167,10 +181,13 @@
               <h2 class="caption">Instagram Stories Concept</h2>
               <p class="desc">Design</p>
             </a>
+          </div>
           </li>
 
           <li class="works-item">
+            
             <a href="" class="link portfolio-link">
+              <div class="app-container"></div>
               <img
                 src="./images/portfolio/organicfood.jpg"
                 alt="Women with vegetable"
@@ -179,10 +196,13 @@
               />
               <h2 class="caption">Organic Food</h2>
               <p class="desc">Web Site</p>
+            </div>
             </a>
+        
           </li>
 
           <li class="works-item">
+            <div class="app-container">
             <a href="" class="link portfolio-link">
               <img
                 src="./images/portfolio/freshcoffee.jpg"
@@ -193,6 +213,7 @@
               <h2 class="caption">Fresh Coffee</h2>
               <p class="desc">Web Site</p>
             </a>
+          </div>
           </li>
         </ul>
       </div>
